--- a/homeworks/HW01/HW01.ipynb
+++ b/homeworks/HW01/HW01.ipynb
@@ -1,66 +1,506 @@
-# Создайте новый файл .ipynb и выполните этот код по частям:
-
-# %% [markdown]
-# # NumPy Basics - Полное руководство
-
-# %%
-# 1. Импорт библиотеки
-import numpy as np
-print("NumPy версии:", np.__version__)
-
-# %%
-# 2. Создание массивов
-print("=== СОЗДАНИЕ МАССИВОВ ===")
-
-# Из списков
-arr1 = np.array([1, 2, 3, 4, 5])
-print("Из списка:", arr1)
-
-arr2 = np.array([[1, 2, 3], [4, 5, 6]])
-print("2D массив:\n", arr2)
-
-# %%
-# Специальные массивы
-zeros = np.zeros((2, 3))
-ones = np.ones((3, 2))
-range_arr = np.arange(0, 10, 2)
-
-print("Нули:\n", zeros)
-print("Единицы:\n", ones)
-print("Диапазон:", range_arr)
-
-# %%
-# 3. Атрибуты
-print("=== АТРИБУТЫ ===")
-print("Форма:", arr2.shape)
-print("Тип данных:", arr2.dtype)
-print("Размерность:", arr2.ndim)
-print("Всего элементов:", arr2.size)
-
-# %%
-# 4. Индексирование и срезы
-print("=== ИНДЕКСИРОВАНИЕ ===")
-arr = np.array([[10, 20, 30], [40, 50, 60], [70, 80, 90]])
-print("Массив:\n", arr)
-print("Элемент [1,2]:", arr[1, 2])
-print("Первая строка:", arr[0, :])
-print("Последний столбец:", arr[:, -1])
-
-# %%
-# 5. Векторные операции
-print("=== ВЕКТОРНЫЕ ОПЕРАЦИИ ===")
-a = np.array([1, 2, 3])
-b = np.array([4, 5, 6])
-
-print("a + b =", a + b)
-print("a * b =", a * b)
-print("a ** 2 =", a ** 2)
-
-# %%
-# Статистика
-data = np.array([2, 4, 6, 8, 10])
-print("Данные:", data)
-print("Среднее:", np.mean(data))
-print("Стандартное отклонение:", np.std(data))
-print("Сумма:", np.sum(data))
-print("Максимум:", np.max(data))
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "a49844f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dfe3394",
+   "metadata": {},
+   "source": [
+    "# Примеры создания массивов"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c836f5b1",
+   "metadata": {},
+   "source": [
+    "## Создание массива из списка"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ee7555d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 2, 3, 5, 8])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,1,2,3,5,8]) # Создание массива из списка\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09d69be5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a) # Тип массива"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3702469d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6,)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape # Форма массива"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "5da08996",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2 = np.array([[1,2,3], # Создание двумерного массива\n",
+    "              [4,5,6]])\n",
+    "a2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02e6eba9",
+   "metadata": {},
+   "source": [
+    "## Создание массива при помощи фукнций"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e752ca18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.eye(5) # Создание единичной матрицы\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fe566633",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  1.,  2.,  3.,  5.,  8., 13., 21., 34., 55.])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = np.empty(10) # Создание массива без инициализации значений\n",
+    "for i in range(10): # Заполнение массива последовательностью Фибоначчи\n",
+    "    if i == 0 or i == 1:\n",
+    "        c[i] = 1\n",
+    "    else:\n",
+    "        c[i] = c[i-1] + c[i-2]\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37d04bcd",
+   "metadata": {},
+   "source": [
+    "# Примеры индексирования и срезов"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dda6235",
+   "metadata": {},
+   "source": [
+    "## Индексирование массива"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "443b72ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(44)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = np.arange(0, 100, 4) \n",
+    "e[11] # Вывод элемента номер 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "1bc81f7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(6)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2[1][2] # Вывод 3ьего элемента 2о строки массива а2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66a9b112",
+   "metadata": {},
+   "source": [
+    "## Срез"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98dfb23f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([36, 40, 44, 48, 52, 56, 60, 64, 68, 72, 76])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e[9:20] # Срез с 10 по 20 элемент"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55923a5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([36, 44, 52, 60, 68, 76])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e[9:20:2] # Срез с 10 по 20 элемент с шагом 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1057555",
+   "metadata": {},
+   "source": [
+    "# Примеры векторных операций и базовых статистик"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcf60c04",
+   "metadata": {},
+   "source": [
+    "## Сложение и умножение массивов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a8f24e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = np.ones(5) # Создание одномерного массива из пяти единичек\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "440d6d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = np.arange(0, 5, 1) # Создание массива со значениями в диапазоне от 0 до 5 с шагом 1\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a59c4b02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 3., 4., 5.])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f + g # Сложение"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "5d26af5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 2., 3., 4.])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f * g # Умножение"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "5b9fd3fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  1.,  4.,  9., 16.])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = np.empty(5)\n",
+    "for i in range(5): # Поэлементное умножение массива на числа от 0 до 4 соответственно\n",
+    "    h[i] = g[i] * i\n",
+    "h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faeefe49",
+   "metadata": {},
+   "source": [
+    "## Статистика"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc1d3759",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(48.0)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(e) # Среднее значение"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75644502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(48.0)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.median(e) # Медиана"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b938b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(28.844410203711913)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(e) # Стандартное отклонение"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
